java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateLocalVariable3.pass
/*
 * AbstractClass.java
 *
 * Created on March 12, 2005, 7:22 PM
 */

package org.netbeans.test.java.hints;

import java.io.IOException;
import javax.swing.text.BadLocationException;

/**
 *
 * @author lahvac
 */
public abstract class CreateLocalVariable3 {
    
    /** Creates a new instance of AbstractClass */
    public CreateLocalVariable3() {
        String foo = "bar";
    }
    
}
